# calligra

./: .gitmodules
calligra/: CMakeLists.txt
calligra/cmake/kde_macro/: kde4uic.cmake
calligra/cmake/productsets/: libraries.cmake
calligra/extras/properties/: KoDocInfoPropsFactory.cpp
calligra/fake/: karchive.h  kmimetype.h
calligra/filters/libmsooxml/: MsooXmlDiagramReader_p.cpp
calligra/filters/sheets/: CMakeLists.txt
calligra/filters/words/: CMakeLists.txt
calligra/kf5/xmlgui/src/: CMakeLists.txt
calligra/libs/flake/: KoPathPoint.cpp  KoPathShape.cpp  KoPostscriptPaintDevice.cpp  KoSnapStrategy.cpp
calligra/libs/main/: KoApplication.cpp  KoAutoSaveRecoveryDialog.cpp  KoDocumentInfo.cpp  KoDocumentInfoPropsPage.cpp  KoFindText.h  KoFindToolbar.cpp  KoFindToolbar_p.h  KoMainWindow.cpp  KoRecentDocumentsPane.cpp
calligra/libs/pigment/: KoConvolutionOpImpl.h
calligra/libs/widgetutils/: KoProperties.cpp
calligra/sheets/: Style.cpp  ValueParser.cpp
calligra/sheets/plugins/: CMakeLists.txt
calligra/sheets/ui/: CellToolBase.cpp  CellToolBase_p.cpp
calligra/words/part/: CMakeLists.txt  KWCanvasBase.cpp  KWCanvasItem.cpp
fake/away/: kservicetype.h
flow/part/: FlowFactoryInit.h
rpm/: 0001-calligra-Fix-infinite-loop-while-trying-to-translate.patch  calligra-ascii-import.patch  calligra-background.patch  calligra-buildsystem.patch  calligra-cache.patch  calligra-conditional-styles.patch  calligra-double-formatting.patch  calligra-error-reporting.patch  calligra-fake-kde4libs.patch  calligra-find.patch  calligra-gcc6.patch  calligra-invalidate-cache.patch  calligra-libs.patch  calligra-plugins.patch  calligra-qt.patch  calligra-qtdbus.patch  calligra-rtf.patch  calligra-sheets-csvimport.patch  calligra-sheets-read-time.patch  calligra-sheets.patch  calligra-stage.patch  calligra-xlsx-styling.patch  calligra.spec  k18n-disable-q_coreapp_startup_function.patch  kconfigwidgets-no-kauth.patch  kdiagram-build-qreal-float.patch  kio-cmake-fix.patch  kio-no-solid.patch  kservices-no-krash.patch  kxmlgui-disable_startup_functions.patch  kxmlgui-no-textwidgets.patch
(+7 files in other folders)
